# SR_Project

./: .gitignore  README.md
Electronics/: PowerPico.asc  R_PICO.kicad_prl  R_PICO.kicad_pro  R_PICO.kicad_sch  R_PICO.wbk
Mechanics/: arent.stl  kola.stl  konsola_silniki.stl  korpus.stl  platforma.stl
sumo/: BUILD.md  CMakeLists.txt
sumo/inc/: adc_line_detector.h  i2c.h  lwipopts.h  main.h  pwm_motor_control.h  tcp.h  tcp_api_implementation.h  tcp_handling.h  tcp_typedefs.h  tof_i2c.h
sumo/lib/: CMakeLists.txt
sumo/lib/VL53L0X_pico/: CMakeLists.txt  README.md
sumo/lib/VL53L0X_pico_lib/inc/: tof.h
sumo/lib/VL53L0X_pico_lib/src/: tof.c
sumo/lib/libVL53L0X_pico/: CMakeLists.txt  LICENSE.txt  README.md
sumo/lib/libVL53L0X_pico/inc/: VL53L0X_pico.h
sumo/lib/libVL53L0X_pico/src/: VL53L0X_pico.c
sumo/src/: adc_line_detector.c  i2c.c  main.c  pwm_motor_control.c  tcp.c  tcp_api_implementation.c  tcp_handling.c  tcp_typedefs.c  tof_i2c.c
